tests/__snapshots__/api-toAcceptProps-class-components-stderr.snap.txt
Error: Component does not accept props of the given type.

'None' cannot be used as a JSX component.
Its type 'typeof None' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: {}) => None' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'None' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  46 | 
  47 |   test("accepts props of the given type", () => {
  48 |     expect(None).type.toAcceptProps({});
     |                       ~~~~~~~~~~~~~
  49 |     expect(None).type.not.toAcceptProps({}); // fail
  50 | 
  51 |     expect(None).type.not.toAcceptProps({ one: "sample" });

       at ./__typetests__/class-components.tst.tsx:48:23 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

'None' cannot be used as a JSX component.
Its type 'typeof None' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: {}) => None' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'None' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  50 | 
  51 |     expect(None).type.not.toAcceptProps({ one: "sample" });
  52 |     expect(None).type.toAcceptProps({ one: "sample" }); // fail
     |                       ~~~~~~~~~~~~~
  53 | 
  54 |     expect(First).type.toAcceptProps({});
  55 |     expect(First).type.not.toAcceptProps({}); // fail

       at ./__typetests__/class-components.tst.tsx:52:23 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

Type '{ one: string; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<None>'.
Property 'one' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<None>'.

  50 | 
  51 |     expect(None).type.not.toAcceptProps({ one: "sample" });
  52 |     expect(None).type.toAcceptProps({ one: "sample" }); // fail
     |                                       ~~~
  53 | 
  54 |     expect(First).type.toAcceptProps({});
  55 |     expect(First).type.not.toAcceptProps({}); // fail

       at ./__typetests__/class-components.tst.tsx:52:39 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

'First' cannot be used as a JSX component.
Its type 'typeof First' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: FirstProps) => First' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'First' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  52 |     expect(None).type.toAcceptProps({ one: "sample" }); // fail
  53 | 
  54 |     expect(First).type.toAcceptProps({});
     |                        ~~~~~~~~~~~~~
  55 |     expect(First).type.not.toAcceptProps({}); // fail
  56 | 
  57 |     expect(First).type.toAcceptProps({ one: "sample" });

       at ./__typetests__/class-components.tst.tsx:54:24 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

'First' cannot be used as a JSX component.
Its type 'typeof First' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: FirstProps) => First' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'First' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  55 |     expect(First).type.not.toAcceptProps({}); // fail
  56 | 
  57 |     expect(First).type.toAcceptProps({ one: "sample" });
     |                        ~~~~~~~~~~~~~
  58 |     expect(First).type.not.toAcceptProps({ one: "sample" }); // fail
  59 | 
  60 |     expect(Second).type.toAcceptProps({ one: "sample" });

       at ./__typetests__/class-components.tst.tsx:57:24 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  58 |     expect(First).type.not.toAcceptProps({ one: "sample" }); // fail
  59 | 
  60 |     expect(Second).type.toAcceptProps({ one: "sample" });
     |                         ~~~~~~~~~~~~~
  61 |     expect(Second).type.not.toAcceptProps({ one: "sample" }); // fail
  62 | 
  63 |     expect(Second).type.toAcceptProps({ one: "sample", two: true });

       at ./__typetests__/class-components.tst.tsx:60:25 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  61 |     expect(Second).type.not.toAcceptProps({ one: "sample" }); // fail
  62 | 
  63 |     expect(Second).type.toAcceptProps({ one: "sample", two: true });
     |                         ~~~~~~~~~~~~~
  64 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true }); // fail
  65 |   });
  66 | 

       at ./__typetests__/class-components.tst.tsx:63:25 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

Property 'one' is missing in type '{}' but required in type 'SecondProps'.

  67 |   test("property is required in props type", () => {
  68 |     expect(Second).type.not.toAcceptProps({});
  69 |     expect(Second).type.toAcceptProps({}); // fail
     |                         ~~~~~~~~~~~~~
  70 | 
  71 |     expect(Second).type.not.toAcceptProps({ two: true });
  72 |     expect(Second).type.toAcceptProps({ two: true }); // fail

       at ./__typetests__/class-components.tst.tsx:69:25 ❭ when source is a function component ❭ property is required in props type

    'one' is declared here. ts(2728)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/class-components.tst.tsx:9:3

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  67 |   test("property is required in props type", () => {
  68 |     expect(Second).type.not.toAcceptProps({});
  69 |     expect(Second).type.toAcceptProps({}); // fail
     |                         ~~~~~~~~~~~~~
  70 | 
  71 |     expect(Second).type.not.toAcceptProps({ two: true });
  72 |     expect(Second).type.toAcceptProps({ two: true }); // fail

       at ./__typetests__/class-components.tst.tsx:69:25 ❭ when source is a function component ❭ property is required in props type

Error: Component does not accept props of the given type.

Property 'one' is missing in type '{ two: true; }' but required in type 'SecondProps'.

  70 | 
  71 |     expect(Second).type.not.toAcceptProps({ two: true });
  72 |     expect(Second).type.toAcceptProps({ two: true }); // fail
     |                         ~~~~~~~~~~~~~
  73 |   });
  74 | 
  75 |   test("property does not exist in props type", () => {

       at ./__typetests__/class-components.tst.tsx:72:25 ❭ when source is a function component ❭ property is required in props type

    'one' is declared here. ts(2728)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/class-components.tst.tsx:9:3

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  70 | 
  71 |     expect(Second).type.not.toAcceptProps({ two: true });
  72 |     expect(Second).type.toAcceptProps({ two: true }); // fail
     |                         ~~~~~~~~~~~~~
  73 |   });
  74 | 
  75 |   test("property does not exist in props type", () => {

       at ./__typetests__/class-components.tst.tsx:72:25 ❭ when source is a function component ❭ property is required in props type

Error: Component does not accept props of the given type.

'First' cannot be used as a JSX component.
Its type 'typeof First' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: FirstProps) => First' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'First' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  75 |   test("property does not exist in props type", () => {
  76 |     expect(First).type.not.toAcceptProps({ two: false });
  77 |     expect(First).type.toAcceptProps({ two: false }); // fail
     |                        ~~~~~~~~~~~~~
  78 | 
  79 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  80 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail

       at ./__typetests__/class-components.tst.tsx:77:24 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.

  75 |   test("property does not exist in props type", () => {
  76 |     expect(First).type.not.toAcceptProps({ two: false });
  77 |     expect(First).type.toAcceptProps({ two: false }); // fail
     |                                        ~~~
  78 | 
  79 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  80 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail

       at ./__typetests__/class-components.tst.tsx:77:40 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

'First' cannot be used as a JSX component.
Its type 'typeof First' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: FirstProps) => First' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'First' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  78 | 
  79 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  80 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail
     |                        ~~~~~~~~~~~~~
  81 | 
  82 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  83 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:80:24 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

Type '{ one: string; two: boolean; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.

  78 | 
  79 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  80 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail
     |                                                       ~~~
  81 | 
  82 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  83 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:80:55 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  81 | 
  82 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  83 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail
     |                         ~~~~~~~~~~~~~
  84 | 
  85 |     expect(Second).type.not.toAcceptProps({ two: "no", three: 123 });
  86 |     expect(Second).type.toAcceptProps({ two: "no", three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:83:25 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

Type '{ three: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.

  81 | 
  82 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  83 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail
     |                                         ~~~~~
  84 | 
  85 |     expect(Second).type.not.toAcceptProps({ two: "no", three: 123 });
  86 |     expect(Second).type.toAcceptProps({ two: "no", three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:83:41 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  84 | 
  85 |     expect(Second).type.not.toAcceptProps({ two: "no", three: 123 });
  86 |     expect(Second).type.toAcceptProps({ two: "no", three: 123 }); // fail
     |                         ~~~~~~~~~~~~~
  87 | 
  88 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  89 |     expect(Second).type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:86:25 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

Type 'string' is not assignable to type 'boolean | undefined'.

  84 | 
  85 |     expect(Second).type.not.toAcceptProps({ two: "no", three: 123 });
  86 |     expect(Second).type.toAcceptProps({ two: "no", three: 123 }); // fail
     |                                         ~~~
  87 | 
  88 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  89 |     expect(Second).type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:86:41 ❭ when source is a function component ❭ property does not exist in props type

    The expected type comes from property 'two' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       8 | interface SecondProps {
       9 |   one: string | undefined;
      10 |   two?: boolean;
         |   ~~~
      11 | }
      12 | 
      13 | describe("when source is a function component", () => {

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  87 | 
  88 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  89 |     expect(Second).type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail
     |                         ~~~~~~~~~~~~~
  90 | 
  91 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  92 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:89:25 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

Type 'string' is not assignable to type 'boolean | undefined'.

  87 | 
  88 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  89 |     expect(Second).type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail
     |                                                        ~~~
  90 | 
  91 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  92 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail

       at ./__typetests__/class-components.tst.tsx:89:56 ❭ when source is a function component ❭ property does not exist in props type

    The expected type comes from property 'two' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       8 | interface SecondProps {
       9 |   one: string | undefined;
      10 |   two?: boolean;
         |   ~~~
      11 | }
      12 | 
      13 | describe("when source is a function component", () => {

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  90 | 
  91 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  92 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail
     |                         ~~~~~~~~~~~~~
  93 |   });
  94 | 
  95 |   test("property type is not assignable to prop type", () => {

       at ./__typetests__/class-components.tst.tsx:92:25 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

Type '{ one: string; two: true; three: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.

  90 | 
  91 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  92 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail
     |                                                                   ~~~~~
  93 |   });
  94 | 
  95 |   test("property type is not assignable to prop type", () => {

       at ./__typetests__/class-components.tst.tsx:92:67 ❭ when source is a function component ❭ property does not exist in props type

Error: Component does not accept props of the given type.

'First' cannot be used as a JSX component.
Its type 'typeof First' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: FirstProps) => First' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'First' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

   95 |   test("property type is not assignable to prop type", () => {
   96 |     expect(First).type.not.toAcceptProps({ one: 1 });
   97 |     expect(First).type.toAcceptProps({ one: 1 }); // fail
      |                        ~~~~~~~~~~~~~
   98 | 
   99 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  100 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail

        at ./__typetests__/class-components.tst.tsx:97:24 ❭ when source is a function component ❭ property type is not assignable to prop type

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

   95 |   test("property type is not assignable to prop type", () => {
   96 |     expect(First).type.not.toAcceptProps({ one: 1 });
   97 |     expect(First).type.toAcceptProps({ one: 1 }); // fail
      |                                        ~~~
   98 | 
   99 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  100 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail

        at ./__typetests__/class-components.tst.tsx:97:40 ❭ when source is a function component ❭ property type is not assignable to prop type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps' ts(6500)

      3 | 
      4 | interface FirstProps {
      5 |   one?: string;
        |   ~~~
      6 | }
      7 | 
      8 | interface SecondProps {

          at ./__typetests__/class-components.tst.tsx:5:3

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

   98 | 
   99 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  100 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail
      |                         ~~~~~~~~~~~~~
  101 | 
  102 |     expect(Second).type.not.toAcceptProps({ one: 1, two: 2 });
  103 |     expect(Second).type.toAcceptProps({ one: 1, two: 2 }); // fail

        at ./__typetests__/class-components.tst.tsx:100:25 ❭ when source is a function component ❭ property type is not assignable to prop type

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

   98 | 
   99 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  100 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail
      |                                         ~~~
  101 | 
  102 |     expect(Second).type.not.toAcceptProps({ one: 1, two: 2 });
  103 |     expect(Second).type.toAcceptProps({ one: 1, two: 2 }); // fail

        at ./__typetests__/class-components.tst.tsx:100:41 ❭ when source is a function component ❭ property type is not assignable to prop type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/class-components.tst.tsx:9:3

Error: Component does not accept props of the given type.

'Second' cannot be used as a JSX component.
Its type 'typeof Second' is not a valid JSX element type.
Types of construct signatures are incompatible.
Type 'new (props: SecondProps) => Second' is not assignable to type 'new (props: any, context: any) => Component<any, any, any>'.
Type 'Second' is missing the following properties from type 'Component<any, any, any>': context, setState, forceUpdate, state

  101 | 
  102 |     expect(Second).type.not.toAcceptProps({ one: 1, two: 2 });
  103 |     expect(Second).type.toAcceptProps({ one: 1, two: 2 }); // fail
      |                         ~~~~~~~~~~~~~
  104 |   });
  105 | });
  106 | 

        at ./__typetests__/class-components.tst.tsx:103:25 ❭ when source is a function component ❭ property type is not assignable to prop type

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  101 | 
  102 |     expect(Second).type.not.toAcceptProps({ one: 1, two: 2 });
  103 |     expect(Second).type.toAcceptProps({ one: 1, two: 2 }); // fail
      |                                         ~~~
  104 |   });
  105 | });
  106 | 

        at ./__typetests__/class-components.tst.tsx:103:41 ❭ when source is a function component ❭ property type is not assignable to prop type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       7 | 
       8 | interface SecondProps {
       9 |   one: string | undefined;
         |   ~~~
      10 |   two?: boolean;
      11 | }
      12 | 

           at ./__typetests__/class-components.tst.tsx:9:3

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'boolean | undefined'.

  101 | 
  102 |     expect(Second).type.not.toAcceptProps({ one: 1, two: 2 });
  103 |     expect(Second).type.toAcceptProps({ one: 1, two: 2 }); // fail
      |                                                 ~~~
  104 |   });
  105 | });
  106 | 

        at ./__typetests__/class-components.tst.tsx:103:49 ❭ when source is a function component ❭ property type is not assignable to prop type

    The expected type comes from property 'two' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       8 | interface SecondProps {
       9 |   one: string | undefined;
      10 |   two?: boolean;
         |   ~~~
      11 | }
      12 | 
      13 | describe("when source is a function component", () => {

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  113 | 
  114 |   test("accepts props of the given type", () => {
  115 |     expect<None>().type.toAcceptProps({});
      |                         ~~~~~~~~~~~~~
  116 |     expect<None>().type.not.toAcceptProps({}); // fail
  117 | 
  118 |     expect<None>().type.not.toAcceptProps({ one: "sample" });

        at ./__typetests__/class-components.tst.tsx:115:25 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  113 | 
  114 |   test("accepts props of the given type", () => {
  115 |     expect<None>().type.toAcceptProps({});
      |                         ~~~~~~~~~~~~~
  116 |     expect<None>().type.not.toAcceptProps({}); // fail
  117 | 
  118 |     expect<None>().type.not.toAcceptProps({ one: "sample" });

        at ./__typetests__/class-components.tst.tsx:115:25 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  117 | 
  118 |     expect<None>().type.not.toAcceptProps({ one: "sample" });
  119 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail
      |                         ~~~~~~~~~~~~~
  120 | 
  121 |     expect<None>().type.not.toAcceptProps({ one: "sample" });
  122 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail

        at ./__typetests__/class-components.tst.tsx:119:25 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  117 | 
  118 |     expect<None>().type.not.toAcceptProps({ one: "sample" });
  119 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail
      |                         ~~~~~~~~~~~~~
  120 | 
  121 |     expect<None>().type.not.toAcceptProps({ one: "sample" });
  122 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail

        at ./__typetests__/class-components.tst.tsx:119:25 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  120 | 
  121 |     expect<None>().type.not.toAcceptProps({ one: "sample" });
  122 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail
      |                         ~~~~~~~~~~~~~
  123 | 
  124 |     expect<First>().type.toAcceptProps({});
  125 |     expect<First>().type.not.toAcceptProps({}); // fail

        at ./__typetests__/class-components.tst.tsx:122:25 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  120 | 
  121 |     expect<None>().type.not.toAcceptProps({ one: "sample" });
  122 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail
      |                         ~~~~~~~~~~~~~
  123 | 
  124 |     expect<First>().type.toAcceptProps({});
  125 |     expect<First>().type.not.toAcceptProps({}); // fail

        at ./__typetests__/class-components.tst.tsx:122:25 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  122 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail
  123 | 
  124 |     expect<First>().type.toAcceptProps({});
      |                          ~~~~~~~~~~~~~
  125 |     expect<First>().type.not.toAcceptProps({}); // fail
  126 | 
  127 |     expect<First>().type.toAcceptProps({ one: "sample" });

        at ./__typetests__/class-components.tst.tsx:124:26 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  122 |     expect<None>().type.toAcceptProps({ one: "sample" }); // fail
  123 | 
  124 |     expect<First>().type.toAcceptProps({});
      |                          ~~~~~~~~~~~~~
  125 |     expect<First>().type.not.toAcceptProps({}); // fail
  126 | 
  127 |     expect<First>().type.toAcceptProps({ one: "sample" });

        at ./__typetests__/class-components.tst.tsx:124:26 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  125 |     expect<First>().type.not.toAcceptProps({}); // fail
  126 | 
  127 |     expect<First>().type.toAcceptProps({ one: "sample" });
      |                          ~~~~~~~~~~~~~
  128 |     expect<First>().type.not.toAcceptProps({ one: "sample" }); // fail
  129 | 
  130 |     expect<Second>().type.toAcceptProps({ one: "sample" });

        at ./__typetests__/class-components.tst.tsx:127:26 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  125 |     expect<First>().type.not.toAcceptProps({}); // fail
  126 | 
  127 |     expect<First>().type.toAcceptProps({ one: "sample" });
      |                          ~~~~~~~~~~~~~
  128 |     expect<First>().type.not.toAcceptProps({ one: "sample" }); // fail
  129 | 
  130 |     expect<Second>().type.toAcceptProps({ one: "sample" });

        at ./__typetests__/class-components.tst.tsx:127:26 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  128 |     expect<First>().type.not.toAcceptProps({ one: "sample" }); // fail
  129 | 
  130 |     expect<Second>().type.toAcceptProps({ one: "sample" });
      |                           ~~~~~~~~~~~~~
  131 |     expect<Second>().type.not.toAcceptProps({ one: "sample" }); // fail
  132 | 
  133 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true });

        at ./__typetests__/class-components.tst.tsx:130:27 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  128 |     expect<First>().type.not.toAcceptProps({ one: "sample" }); // fail
  129 | 
  130 |     expect<Second>().type.toAcceptProps({ one: "sample" });
      |                           ~~~~~~~~~~~~~
  131 |     expect<Second>().type.not.toAcceptProps({ one: "sample" }); // fail
  132 | 
  133 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true });

        at ./__typetests__/class-components.tst.tsx:130:27 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  131 |     expect<Second>().type.not.toAcceptProps({ one: "sample" }); // fail
  132 | 
  133 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true });
      |                           ~~~~~~~~~~~~~
  134 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true }); // fail
  135 |   });
  136 | 

        at ./__typetests__/class-components.tst.tsx:133:27 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  131 |     expect<Second>().type.not.toAcceptProps({ one: "sample" }); // fail
  132 | 
  133 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true });
      |                           ~~~~~~~~~~~~~
  134 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true }); // fail
  135 |   });
  136 | 

        at ./__typetests__/class-components.tst.tsx:133:27 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  137 |   test("property is required in props type", () => {
  138 |     expect<Second>().type.not.toAcceptProps({});
  139 |     expect<Second>().type.toAcceptProps({}); // fail
      |                           ~~~~~~~~~~~~~
  140 | 
  141 |     expect<Second>().type.not.toAcceptProps({ two: true });
  142 |     expect<Second>().type.toAcceptProps({ two: true }); // fail

        at ./__typetests__/class-components.tst.tsx:139:27 ❭ when source is a type ❭ property is required in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  137 |   test("property is required in props type", () => {
  138 |     expect<Second>().type.not.toAcceptProps({});
  139 |     expect<Second>().type.toAcceptProps({}); // fail
      |                           ~~~~~~~~~~~~~
  140 | 
  141 |     expect<Second>().type.not.toAcceptProps({ two: true });
  142 |     expect<Second>().type.toAcceptProps({ two: true }); // fail

        at ./__typetests__/class-components.tst.tsx:139:27 ❭ when source is a type ❭ property is required in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  140 | 
  141 |     expect<Second>().type.not.toAcceptProps({ two: true });
  142 |     expect<Second>().type.toAcceptProps({ two: true }); // fail
      |                           ~~~~~~~~~~~~~
  143 |   });
  144 | 
  145 |   test("property does not exist in props type", () => {

        at ./__typetests__/class-components.tst.tsx:142:27 ❭ when source is a type ❭ property is required in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  140 | 
  141 |     expect<Second>().type.not.toAcceptProps({ two: true });
  142 |     expect<Second>().type.toAcceptProps({ two: true }); // fail
      |                           ~~~~~~~~~~~~~
  143 |   });
  144 | 
  145 |   test("property does not exist in props type", () => {

        at ./__typetests__/class-components.tst.tsx:142:27 ❭ when source is a type ❭ property is required in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  145 |   test("property does not exist in props type", () => {
  146 |     expect<First>().type.not.toAcceptProps({ two: false });
  147 |     expect<First>().type.toAcceptProps({ two: false }); // fail
      |                          ~~~~~~~~~~~~~
  148 | 
  149 |     expect<First>().type.not.toAcceptProps({ one: "sample", two: false });
  150 |     expect<First>().type.toAcceptProps({ one: "sample", two: false }); // fail

        at ./__typetests__/class-components.tst.tsx:147:26 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  145 |   test("property does not exist in props type", () => {
  146 |     expect<First>().type.not.toAcceptProps({ two: false });
  147 |     expect<First>().type.toAcceptProps({ two: false }); // fail
      |                          ~~~~~~~~~~~~~
  148 | 
  149 |     expect<First>().type.not.toAcceptProps({ one: "sample", two: false });
  150 |     expect<First>().type.toAcceptProps({ one: "sample", two: false }); // fail

        at ./__typetests__/class-components.tst.tsx:147:26 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  148 | 
  149 |     expect<First>().type.not.toAcceptProps({ one: "sample", two: false });
  150 |     expect<First>().type.toAcceptProps({ one: "sample", two: false }); // fail
      |                          ~~~~~~~~~~~~~
  151 | 
  152 |     expect<Second>().type.not.toAcceptProps({ three: 123 });
  153 |     expect<Second>().type.toAcceptProps({ three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:150:26 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  148 | 
  149 |     expect<First>().type.not.toAcceptProps({ one: "sample", two: false });
  150 |     expect<First>().type.toAcceptProps({ one: "sample", two: false }); // fail
      |                          ~~~~~~~~~~~~~
  151 | 
  152 |     expect<Second>().type.not.toAcceptProps({ three: 123 });
  153 |     expect<Second>().type.toAcceptProps({ three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:150:26 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  151 | 
  152 |     expect<Second>().type.not.toAcceptProps({ three: 123 });
  153 |     expect<Second>().type.toAcceptProps({ three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  154 | 
  155 |     expect<Second>().type.not.toAcceptProps({ two: "no", three: 123 });
  156 |     expect<Second>().type.toAcceptProps({ two: "no", three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:153:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  151 | 
  152 |     expect<Second>().type.not.toAcceptProps({ three: 123 });
  153 |     expect<Second>().type.toAcceptProps({ three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  154 | 
  155 |     expect<Second>().type.not.toAcceptProps({ two: "no", three: 123 });
  156 |     expect<Second>().type.toAcceptProps({ two: "no", three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:153:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  154 | 
  155 |     expect<Second>().type.not.toAcceptProps({ two: "no", three: 123 });
  156 |     expect<Second>().type.toAcceptProps({ two: "no", three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  157 | 
  158 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  159 |     expect<Second>().type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:156:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  154 | 
  155 |     expect<Second>().type.not.toAcceptProps({ two: "no", three: 123 });
  156 |     expect<Second>().type.toAcceptProps({ two: "no", three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  157 | 
  158 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  159 |     expect<Second>().type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:156:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  157 | 
  158 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  159 |     expect<Second>().type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  160 | 
  161 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  162 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:159:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  157 | 
  158 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: "no", three: 123 });
  159 |     expect<Second>().type.toAcceptProps({ one: "sample", two: "no", three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  160 | 
  161 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  162 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail

        at ./__typetests__/class-components.tst.tsx:159:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  160 | 
  161 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  162 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  163 |   });
  164 | 
  165 |   test("property type is not assignable to prop type", () => {

        at ./__typetests__/class-components.tst.tsx:162:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  160 | 
  161 |     expect<Second>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  162 |     expect<Second>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail
      |                           ~~~~~~~~~~~~~
  163 |   });
  164 | 
  165 |   test("property type is not assignable to prop type", () => {

        at ./__typetests__/class-components.tst.tsx:162:27 ❭ when source is a type ❭ property does not exist in props type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  165 |   test("property type is not assignable to prop type", () => {
  166 |     expect<First>().type.not.toAcceptProps({ one: 1 });
  167 |     expect<First>().type.toAcceptProps({ one: 1 }); // fail
      |                          ~~~~~~~~~~~~~
  168 | 
  169 |     expect<Second>().type.not.toAcceptProps({ one: 1 });
  170 |     expect<Second>().type.toAcceptProps({ one: 1 }); // fail

        at ./__typetests__/class-components.tst.tsx:167:26 ❭ when source is a type ❭ property type is not assignable to prop type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  165 |   test("property type is not assignable to prop type", () => {
  166 |     expect<First>().type.not.toAcceptProps({ one: 1 });
  167 |     expect<First>().type.toAcceptProps({ one: 1 }); // fail
      |                          ~~~~~~~~~~~~~
  168 | 
  169 |     expect<Second>().type.not.toAcceptProps({ one: 1 });
  170 |     expect<Second>().type.toAcceptProps({ one: 1 }); // fail

        at ./__typetests__/class-components.tst.tsx:167:26 ❭ when source is a type ❭ property type is not assignable to prop type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  168 | 
  169 |     expect<Second>().type.not.toAcceptProps({ one: 1 });
  170 |     expect<Second>().type.toAcceptProps({ one: 1 }); // fail
      |                           ~~~~~~~~~~~~~
  171 | 
  172 |     expect<Second>().type.not.toAcceptProps({ one: 1, two: 2 });
  173 |     expect<Second>().type.toAcceptProps({ one: 1, two: 2 }); // fail

        at ./__typetests__/class-components.tst.tsx:170:27 ❭ when source is a type ❭ property type is not assignable to prop type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  168 | 
  169 |     expect<Second>().type.not.toAcceptProps({ one: 1 });
  170 |     expect<Second>().type.toAcceptProps({ one: 1 }); // fail
      |                           ~~~~~~~~~~~~~
  171 | 
  172 |     expect<Second>().type.not.toAcceptProps({ one: 1, two: 2 });
  173 |     expect<Second>().type.toAcceptProps({ one: 1, two: 2 }); // fail

        at ./__typetests__/class-components.tst.tsx:170:27 ❭ when source is a type ❭ property type is not assignable to prop type

Error: Type does not accept props of the given type.

Property 'undefined' does not exist on type 'JSX.IntrinsicElements'.

  171 | 
  172 |     expect<Second>().type.not.toAcceptProps({ one: 1, two: 2 });
  173 |     expect<Second>().type.toAcceptProps({ one: 1, two: 2 }); // fail
      |                           ~~~~~~~~~~~~~
  174 |   });
  175 | });
  176 | 

        at ./__typetests__/class-components.tst.tsx:173:27 ❭ when source is a type ❭ property type is not assignable to prop type

Error: Type does not accept props of the given type.

JSX elements cannot have multiple attributes with the same name.

  171 | 
  172 |     expect<Second>().type.not.toAcceptProps({ one: 1, two: 2 });
  173 |     expect<Second>().type.toAcceptProps({ one: 1, two: 2 }); // fail
      |                           ~~~~~~~~~~~~~
  174 |   });
  175 | });
  176 | 

        at ./__typetests__/class-components.tst.tsx:173:27 ❭ when source is a type ❭ property type is not assignable to prop type

